fixed h1 tag by putting it in a div so it no longer causes distortion in the tree view

--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -1,11 +1,7 @@
 @import "ui-variables";
 
-.header{
+.compileheader{
   text-align: center;
-}
-
-.dialog{
-  z-index: 100;
 }
 
 .plus{
